Implement UI for ungrouped topics page
